--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,5 +119,26 @@
         app:layout_constraintVertical_bias="0.4"
         app:srcCompat="@drawable/notification" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="33dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/money" />
+
+    <TextView
+        android:id="@+id/money1"
+        android:layout_width="66dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="7dp"
+        android:gravity="center|left"
+        android:text="100$"
+        android:textColor="#4CAF50"
+        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
+        app:layout_constraintStart_toEndOf="@+id/imageView6" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
