--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -86,6 +86,50 @@
         app:layout_constraintVertical_bias="0.15" />
 
     <View
+        android:id="@+id/rectangle_18"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.326" />
+
+    <View
+        android:id="@+id/rectangle_19"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.327" />
+
+    <View
+        android:id="@+id/rectangle_20"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.943"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.327" />
+
+    <View
         android:id="@+id/rectangle_16"
         android:layout_width="111dp"
         android:layout_height="107dp"
@@ -238,6 +282,139 @@
         app:layout_constraintEnd_toEndOf="@+id/rectangle_15"
         app:layout_constraintStart_toStartOf="@+id/rectangle_15"
         app:layout_constraintTop_toTopOf="@+id/rectangle_15" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="80dp"
+        android:layout_height="21dp"
+        android:text="Intel core i5"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_10"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_10"
+        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_10"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_10"
+        app:layout_constraintVertical_bias="0.023" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="Intel core i7"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
+        app:layout_constraintVertical_bias="0.068" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Intel core i9"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_16"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_16"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_16"
+        app:layout_constraintVertical_bias="0.034" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="AMD Ryzen 5"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_18"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_18"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_18"
+        app:layout_constraintVertical_bias="0.022" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="AMD Ryzen 7"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_19"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_19"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_19"
+        app:layout_constraintVertical_bias="0.034" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="AMD Ryzen 9"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_20"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_20"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_20"
+        app:layout_constraintVertical_bias="0.045" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="250"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_18"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_18"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_18" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:text="850"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_19"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_19"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_19"
+        app:layout_constraintVertical_bias="0.954" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:text="1250"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_20"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_20"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_20"
+        app:layout_constraintVertical_bias="0.965" />
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="57dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_18"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_18"
+        app:layout_constraintTop_toTopOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.428"
+        app:srcCompat="@drawable/ryzen5" />
+
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="57dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_19"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_19"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_19"
+        app:layout_constraintVertical_bias="0.428"
+        app:srcCompat="@drawable/ryzen7" />
+
+    <ImageView
+        android:id="@+id/imageView22"
+        android:layout_width="57dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_20"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_20"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_20"
+        app:layout_constraintVertical_bias="0.448"
+        app:srcCompat="@drawable/ryzen9" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
